# Epub-reader

./: WARP.md  console.txt  debug-tauri.html  improvements.txt  recent-improvements.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src-tauri/src/parsers/: epub_parser_new.rs
src-tauri/src/database/: mod.rs
src-tauri/src/parsers/: epub_parser.rs  mod.rs  pdf_parser.rs  txt_parser.rs
src/ui/: app.js  index.html  styles.css
